[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/case.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="case0" parent="." instance=ExtResource( 1 )]
position = Vector2( 336, 144 )

[node name="case1" parent="." instance=ExtResource( 1 )]
position = Vector2( 408, 144 )

[node name="case2" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 144 )

[node name="case3" parent="." instance=ExtResource( 1 )]
position = Vector2( 552, 144 )

[node name="case4" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 144 )

[node name="case5" parent="." instance=ExtResource( 1 )]
position = Vector2( 336, 216 )

[node name="case6" parent="." instance=ExtResource( 1 )]
position = Vector2( 408, 216 )

[node name="case7" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 216 )

[node name="case8" parent="." instance=ExtResource( 1 )]
position = Vector2( 552, 216 )

[node name="case9" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 216 )

[node name="case10" parent="." instance=ExtResource( 1 )]
position = Vector2( 336, 288 )

[node name="case11" parent="." instance=ExtResource( 1 )]
position = Vector2( 408, 288 )

[node name="case12" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 288 )

[node name="case13" parent="." instance=ExtResource( 1 )]
position = Vector2( 552, 288 )

[node name="case14" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 288 )

[node name="case15" parent="." instance=ExtResource( 1 )]
position = Vector2( 336, 360 )

[node name="case16" parent="." instance=ExtResource( 1 )]
position = Vector2( 408, 360 )

[node name="case17" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 360 )

[node name="case18" parent="." instance=ExtResource( 1 )]
position = Vector2( 552, 360 )

[node name="case19" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 360 )

[node name="case20" parent="." instance=ExtResource( 1 )]
position = Vector2( 336, 432 )

[node name="case21" parent="." instance=ExtResource( 1 )]
position = Vector2( 408, 432 )

[node name="case22" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 432 )

[node name="case23" parent="." instance=ExtResource( 1 )]
position = Vector2( 552, 432 )

[node name="case24" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 432 )
